[gd_scene load_steps=11 format=3 uid="uid://bi8e0hjcwnsfd"]

[ext_resource type="Texture2D" uid="uid://c1eu31upnhdib" path="res://art/background.png" id="1_o5qli"]
[ext_resource type="Script" uid="uid://c830bimu0ynk5" path="res://scenes/main.gd" id="1_sugp2"]
[ext_resource type="PackedScene" uid="uid://cvi5a67nkrd6k" path="res://scenes/ground.tscn" id="2_0wfyh"]
[ext_resource type="PackedScene" uid="uid://06h0wjoq6kse" path="res://scenes/pipes.tscn" id="2_jyhfs"]
[ext_resource type="PackedScene" uid="uid://sb07y33odnam" path="res://scenes/player.tscn" id="3_tbgi4"]
[ext_resource type="PackedScene" uid="uid://cevmcxbi1p53o" path="res://scenes/hud.tscn" id="6_tefeu"]

[sub_resource type="Animation" id="Animation_jyhfs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(77, 228)]
}

[sub_resource type="Animation" id="Animation_sugp2"]
resource_name = "move ground"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(77, 228), Vector2(70, 228)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tbgi4"]
_data = {
&"RESET": SubResource("Animation_jyhfs"),
&"move ground": SubResource("Animation_sugp2")
}

[sub_resource type="Curve2D" id="Curve2D_jyhfs"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 200, 61, 0, 0, 0, 0, 200, 144)
}
point_count = 2

[node name="Main" type="Node"]
script = ExtResource("1_sugp2")
pipes_scene = ExtResource("2_jyhfs")
player_scene = ExtResource("3_tbgi4")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(72, 128)
texture = ExtResource("1_o5qli")
metadata/_edit_lock_ = true

[node name="Ground" parent="." instance=ExtResource("2_0wfyh")]
position = Vector2(77, 228)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Ground"]
libraries = {
&"": SubResource("AnimationLibrary_tbgi4")
}
speed_scale = 4.0

[node name="PipeSpawnPoint" type="Marker2D" parent="."]
position = Vector2(200, 100)

[node name="PipeSpawnTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="PipePath" type="Path2D" parent="."]
curve = SubResource("Curve2D_jyhfs")

[node name="PipeSpawnLocation" type="PathFollow2D" parent="PipePath"]
position = Vector2(200, 61)
rotation = 1.5708

[node name="PlayerSpawnPoint" type="Marker2D" parent="."]
position = Vector2(72, 100)

[node name="HUD" parent="." instance=ExtResource("6_tefeu")]

[node name="GetReadyTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="timeout" from="PipeSpawnTimer" to="." method="_on_pipe_spawn_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
[connection signal="timeout" from="GetReadyTimer" to="." method="_on_get_ready_timer_timeout"]
